[package]
name = "gtd"
version = "0.1.0"
edition = "2024"
description = "A CLI for David Allen's Getting Things Done methodology"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
dirs = "6"
colored = "3"
dialoguer = "0.11"
walkdir = "2"
regex = "1"
ratatui = "0.29"
crossterm = "0.28"
uuid = { version = "1", features = ["v4"] }
